refactor: for a cleaner runtime classpath, keep logging related tests in a separate subproject