@@ -18,6 +18,7 @@
  */
 
 import org.apache.groovy.gradle.ConcurrentExecutionControlBuildService
+import org.apache.groovy.gradle.TargetJavaHomeSupport
 
 // TODO: Instead of adding to the test sources, these should be a
 // separate source set so that we can run spec tests in isolation
@@ -44,15 +45,9 @@ dependencies {
 tasks.withType(Test).configureEach {
     def fs = objects.newInstance(TestServices).fileSystemOperations
     def grapeDirectory = new File(temporaryDir, 'grape')
-    def jdk8 = ['-XX:+UseConcMarkSweepGC']
-    def jdk9 = ['-Djava.locale.providers=COMPAT,SPI']
-    def common = ['-ea', "-Xms${groovyJUnit_ms}", "-Xmx${groovyJUnit_mx}", '-Duser.language=en']
-    if (JavaVersion.current().isJava9Compatible()) {
-        jvmArgs(*common, *jdk9)
-        systemProperty 'groovy.force.illegal.access', findProperty('groovy.force.illegal.access')
-    } else {
-        jvmArgs(*common, *jdk8)
-    }
+    def options = ['-ea', "-Xms${groovyJUnit_ms}", "-Xmx${groovyJUnit_mx}", '-Duser.language=en', '-Djava.locale.providers=COMPAT,SPI']
+    jvmArgs(*options)
+    systemProperty 'groovy.force.illegal.access', findProperty('groovy.force.illegal.access')
     def testdb = System.properties['groovy.testdb.props']
     if (testdb) {
         systemProperty 'groovy.testdb.props', testdb
@@ -70,12 +65,10 @@ tasks.withType(Test).configureEach {
         userHome: temporaryDir // make sure tests are isolated from real user home or tests using Grape may fail
     ))
 
-    if (rootProject.hasProperty('target.java.home')) {
-        String targetJavaHome = rootProject.property('target.java.home')?.trim()
-        if (targetJavaHome) {
-            executable = "${targetJavaHome}/bin/java"
-            println "Using ${executable} to run tests"
-        }
+    String targetJavaHome = TargetJavaHomeSupport.targetJavaHome(project)
+    if (targetJavaHome) {
+        executable = TargetJavaHomeSupport.javaExecutable(targetJavaHome)
+        println "Using ${executable} to run tests"
     }
 
     forkEvery = 50
@@ -105,6 +98,17 @@ tasks.withType(Test).configureEach {
     doLast {
         fs.delete {
             delete(files(".").filter { it.name.endsWith '.class' })
+        }
+    }
+}
+
+tasks.withType(GroovyCompile).configureEach {
+    if (name == 'compileTestGroovy') {
+        Integer feature = TargetJavaHomeSupport.featureVersionFromReleaseFile(TargetJavaHomeSupport.targetJavaHome(project))
+        if (feature != null) {
+            javaLauncher = javaToolchains.launcherFor {
+                languageVersion = JavaLanguageVersion.of(feature)
+            }
         }
     }
 }
